syntax = "proto3";

package binary;

option go_package = "github.com/sbilibin2017/gophkeeper/pkg/grpc";

import "google/protobuf/empty.proto";

// === Binary Secret ===

message BinaryAddRequest {
  string secret_name = 1;
  bytes data = 2;
  string meta = 3;
}

message BinaryGetRequest {
  string secret_name = 1;
}

message BinaryGetResponse {
  string secret_name = 1;
  string secret_owner = 2;
  bytes data = 3;
  string meta = 4;
  string updated_at = 5;
}

message BinaryListResponse {
  repeated BinaryGetResponse items = 1;
}

service BinaryAddService {
  rpc Add(BinaryAddRequest) returns (google.protobuf.Empty);
}

service BinaryGetService {
  rpc Get(BinaryGetRequest) returns (BinaryGetResponse);
}

service BinaryListService {
  rpc List(google.protobuf.Empty) returns (BinaryListResponse);
}
